@@ -165,9 +165,9 @@ public class FieldConstant {
                 Base.mid_brg_wall.getTranslation().plus(score_right.rotateBy(new Rotation2d(Degrees.of(180)))),
                 new Rotation2d(Degrees.of(180)));
 
-            public static List<Pose2d> cgoals = List.of(
+            public static List<Pose2d> cgoals = new LinkedList<Pose2d>(Arrays.asList(
                 alliance_right, alliance_left, left_brg_left, left_brg_right, left_src_left, left_src_right,
-                right_brg_left,right_brg_right, right_src_left, right_src_right);
+                right_brg_left,right_brg_right, right_src_left, right_src_right));
         }
 
         public class AlgaeSource {
